# timetable-management-system

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  tasks.todo
tests/: test_timetable.py
timetable/: manage.py  middleware.py
timetable/administrator/: admin.py  urls.py
timetable/administrator/forms/: __init__.py  academic_year_form.py  new_class_form.py  new_course_form.py  venue_form.py
timetable/administrator/management/commands/: seeder.py
timetable/administrator/migrations/: 0001_initial.py  0002_auto_20191102_1614.py
timetable/administrator/templates/administrator/: academic_year.html  class.html  courses.html  layout.html  new_staff.html  venue.html
timetable/administrator/templatetags/: is_active.py
timetable/administrator/views/: academic_year.py  auth.py  course.py  dashboard.py  group.py  schedule.py  staff_manager.py  utils.py  venue.py
timetable/models/: __init__.py  academic_year.py  course.py  group.py  lecture_schedule.py  registration.py  schedule.py  schedule_template.py  venue.py
timetable/staff/: urls.py
timetable/staff/datatables/: __init__.py  schedule_datatable.py
timetable/staff/forms/: signup_form.py
timetable/staff/migrations/: 0001_initial.py  0002_auto_20191102_1548.py
timetable/staff/templates/staff/: layout.html  signup.html
timetable/staff/views/: dashboard.py  schedule.py  signup.py
timetable/static/common/css/: keyframe.css  login.css  (+2 more)
timetable/templates/common/: messages.html
timetable/templates/registration/: email.html  login.html
timetable/timetable/: settings.py  urls.py  wsgi.py
(+10 files in other folders)
